Trying to fix scrolling on mobile

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -104,23 +104,26 @@ body {
         text-align: left; }
       .page-content .collection .tower .definition p {
         font-size: 14px; }
-      .page-content .collection .tower .color-list li {
-        display: flex;
-        align-item: center;
-        justify-content: center; }
-        .page-content .collection .tower .color-list li a {
+      .page-content .collection .tower .color-list {
+        overflow-x: scroll;
+        -webkit-overflow-scrolling: touch; }
+        .page-content .collection .tower .color-list li {
           display: flex;
           align-item: center;
-          justify-content: center;
-          margin: 8px; }
-        .page-content .collection .tower .color-list li div {
-          margin: 0 3px; }
-        .page-content .collection .tower .color-list li img {
-          height: 18px; }
-        .page-content .collection .tower .color-list li .garment-svg svg {
-          height: 18;
-          fill: pink;
-          opacity: 70%; }
+          justify-content: center; }
+          .page-content .collection .tower .color-list li a {
+            display: flex;
+            align-item: center;
+            justify-content: center;
+            margin: 8px; }
+          .page-content .collection .tower .color-list li div {
+            margin: 0 3px; }
+          .page-content .collection .tower .color-list li img {
+            height: 18px; }
+          .page-content .collection .tower .color-list li .garment-svg svg {
+            height: 18;
+            fill: pink;
+            opacity: 70%; }
     .page-content .collection .tower-photo {
       background-position: center;
       background-size: cover; }
